--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Wrapper{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  border: 10px solid rgb(27, 146, 96);
+  /* padding: 25px; */
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
+}
+.DAyNumber{
+  padding: 35px;
+  margin-right: 25px;
+  text-align: center;
+  background-color: rgba(4, 119, 104, 0.582);
+  font-size: 35px;
+}
+.itemName{
+display: flex;
+padding: 10px;
+
 }
